# crashlog

./: .editorconfig  README.md
app/: Cargo.toml  README.md
app/src/: decode.rs  extract.rs  info.rs
efi/: Cargo.toml
efi/src/: decode.rs  main.rs
efi/src/pager/: render.rs
lib/: Cargo.toml  README.md  build.rs
lib/collateral/CGC/all/all/all/crashlog/: target_info.json
lib/collateral/CGC/all/all/green/crashlog/decode-defs/PCORE/1/: layout_sq.csv  layout_thread.csv
lib/collateral/CMT/all/all/all/crashlog/: target_info.json
lib/collateral/CMT/all/all/green/crashlog/decode-defs/ECORE/4/: layout_core.csv  layout_module.csv
lib/collateral/DKT/all/all/all/crashlog/: target_info.json
lib/collateral/GNR/SP/all/all/crashlog/: target_info.json
lib/collateral/PTL/H/all/all/crashlog/: target_info.json
lib/collateral/PTL/P/all/all/crashlog/: target_info.json
lib/collateral/RWC/all/all/all/crashlog/: target_info.json
lib/collateral/SRF/SP/all/all/crashlog/: target_info.json
lib/src/: collateral.rs  cper.rs  crashlog.rs  errata.rs  ffi.rs  header.rs  lib.rs  metadata.rs  node.rs  record.rs  region.rs
lib/src/bert/: berr.rs  tests.rs
lib/src/collateral/: pvss.rs
lib/src/cper/: descr.rs  header.rs  revision.rs  section.rs  tests.rs  utils.rs
lib/src/cper/section/: fer.rs
lib/src/extract/: efi.rs  event_log.rs  sysfs.rs
lib/src/ffi/: tests.rs
lib/src/record/: core.rs  decode.rs
lib/tests/: core.rs  crashlog.rs  header.rs  record.rs
lib/tests/samples/: legacy_type0.crashlog  legacy_type0_box.crashlog
(+20 files in other folders)
