[package]
name = "intel_crashlog_efi"
version = "1.0.0"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "iclg"
path = "src/main.rs"

[dependencies]
log = "0.4"

[dependencies.intel_crashlog]
version = "1"
path = "../lib"
default-features = false
features = [
    "embedded_collateral_tree",
    "extraction",
    "serialize",
]

[dependencies.uefi]
version = "0.37"
features = [
    "alloc",
    "panic_handler",
    "logger",
    "global_allocator"
]

[dependencies.acpi]
version = "5"
default-features = false

[dependencies.serde_json]
version = "1"
default-features = false
features = [
    "alloc"
]

[profile.release]
strip = true
